--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,16 +1,26 @@
 .nav {
-    height: 5.875rem;
-    display: flex;
-    padding: 2rem;
-    align-items: center;
-    border-bottom: 1px solid #d5d5d5;
-  }
-  
-  .nav ul {
-    list-style: none;
-    display: flex;
-  }
-  
-  .nav ul li {
-    margin-right: 1rem;
-  }
+  height: 5.875rem;
+  display: flex;
+  padding: 2rem;
+  align-items: center;
+  border-bottom: 1px solid #d5d5d5;
+}
+
+.nav ul {
+  list-style: none;
+  display: flex;
+}
+
+.nav ul li {
+  margin-right: 1rem;
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+  color: rgb(82, 79, 79);
+}
+
+.active {
+  color: blueviolet;
+}
